fix: normalize lockfiles for Windows
Normalize line endings before calculating checksum.

test code-quality on windows runner